# Smallworld

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  run_test.sh
UML/: class_diagram.dia
ideas/: Renderer.md  State.md  changes_to_state.md
rapport/: Makefile  Rapport.md  cmake_install.cmake  generate_report.sh
src/: graphic_resources_dir.h.in  renderer.dia  state.dia
src/client/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/graphic_resources/: pawn_spritesheet_indexing.json  power_spritesheet_indexing.json  species_spritesheet_indexing.json
src/shared/: CMakeLists.txt  Makefile  cmake_install.cmake
src/shared/renderer/: Map_Renderer.cpp  Player_Area_Renderer.cpp  Token_Renderer.cpp  Tribe_Renderer.cpp  Tribe_Stack_Renderer.cpp  Units_Renderer.cpp
src/shared/state/: Area.cpp  Dwarf_Effects_Bundle.cpp  Dwarves_Species.cpp  Effects_Bundle.cpp  Game_State.cpp  Giant_Effects_Bundle.cpp  Map.cpp  Player.cpp  Power_Description.cpp  Ratmen_Effects_Bundle.cpp  Species_Description.cpp  Tribe.cpp  Tribe_Stack.cpp  data.json
test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/client/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_client_dummy  test_player_area_renderer.cpp  test_renderer.cpp  test_token_renderer.cpp  test_tribe_renderer.cpp
test/shared/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  data.json  test_Tribe.cpp  test_Tribe_Stack.cpp  test_area.cpp  test_game_state.cpp  test_map.cpp  test_map_renderer.cpp  test_player.cpp  test_renderer.cpp  (+11 more)
(+18 files in other folders)
